[feature] initial implementation (#1)
* initial implementation

* document role variables

* document httpd_openbsd_log_directories

also, support string in `mode`

* update README

* rubocopfy

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,9 +22,20 @@ provisioner:
   ansible_vault_password_file: <%= File.expand_path(ENV['ANSIBLE_VAULT_PASSWORD_FILE'] || '') %>
 
 platforms:
-  - name: freebsd-10.3-amd64
+  - name: openbsd-6.0-amd64
     driver:
-      box: trombik/ansible-freebsd-10.3-amd64
+      box: trombik/ansible-openbsd-6.0-amd64
+      box_check_update: false
+    driver_config:
+      ssh:
+        shell: '/bin/sh'
+    provisioner:
+      extra_vars:
+        ansible_python_interpreter: '/usr/local/bin/python'
+
+  - name: openbsd-6.1-amd64
+    driver:
+      box: trombik/ansible-openbsd-6.1-amd64
       box_check_update: false
     driver_config:
       ssh:
