--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,10 @@
-httpd-openbsd_user: httpd-openbsd
-httpd-openbsd_group: httpd-openbsd
-httpd-openbsd_log_dir: /var/log/httpd-openbsd
-httpd-openbsd_db_dir: "{{ __httpd-openbsd_db_dir }}"
-httpd-openbsd_service: httpd-openbsd
-httpd-openbsd_conf_dir: "{{ __httpd-openbsd_conf_dir }}"
-httpd-openbsd_conf_file: "{{ __httpd-openbsd_conf_dir }}/httpd-openbsd.conf"
-httpd-openbsd_flags: ""
+httpd_openbsd_user: "{{ __httpd_openbsd_user }}"
+httpd_openbsd_group: "{{ __httpd_openbsd_group }}"
+httpd_openbsd_log_directories: []
+httpd_openbsd_service: "{{ __httpd_openbsd_service }}"
+httpd_openbsd_conf_dir: "{{ __httpd_openbsd_conf_dir }}"
+httpd_openbsd_conf_file: "{{ httpd_openbsd_conf_dir }}/httpd.conf"
+httpd_openbsd_flags: "-f {{ httpd_openbsd_conf_file }}"
+httpd_openbsd_chroot: ""
+
+httpd_openbsd_config: ""
