--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: Tomoyuki Sakurai
   description: Configures httpd(8) from OpenBSD
-  company: Reallyenglish
+  company: N/A
   license: BSD
   min_ansible_version: 2.0
   platforms:
